# dexpi-sfiles-mcp-server

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AUDIT_REPORTS_INDEX.md  BUGS-MCP-TEST.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION_MATRIX.md  CONTRIBUTING.md  CORE_LAYER_FINDINGS.txt  CORE_LAYER_MIGRATION_PLAN_UPDATED.md  CORE_LAYER_STATUS.txt  CORE_LAYER_STATUS_UPDATE.md  CORRECTED_ACTION_PLAN.md  CRITICAL_GAPS.md  CURRENT_TASK.md  FUNCTIONALITY_GAP_ANALYSIS.md  GUIDE.md  HIGH_ROI_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_REVIEW.md  IMPLEMENTATION_PROGRESS.md  LICENSE  MCP_TOOL_DOCUMENTATION_REVIEW.md  MIGRATION_INDEX.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_SUMMARY.md  README.md  ROADMAP.md  SEPARATION_OF_CONCERNS_ANALYSIS.md  SETUP.md  STATUS.md  debug_connection.py  docker-compose.yml  mcp.json  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: CODEX_ANALYSIS_EQUIPMENT_GAP.md  CODEX_REVIEW_FIXES.md  COMPLETE_PYDEXPI_COVERAGE_ANALYSIS.md  COMPONENT_CLASS_MAPPING.md  DAY2_XSD_ANALYSIS.md  DAY5_PIPING_EXPORT_COMPLETE.md  DAY6_7_INSTRUMENTATION_EXPORT_COMPLETE.md  DYNAMIC_SCHEMA.md  EQUIPMENT_CATALOG.md  EQUIPMENT_COVERAGE_ANALYSIS.md  FEATURE_PARITY_MATRIX.md  LAYOUT_SYSTEM.md  MCP_TOOL_EXAMPLES.md  PARAMETER_METADATA_SYSTEM.md  PHASE1_COMPLETE_SUMMARY.md  PHASE1_COMPLETION.md  PHASE1_CONSUMERS.md  PHASE1_EQUIPMENT_GENERATION_SUMMARY.md  PHASE2_1_COMPLETE_SUMMARY.md  PHASE3_PASS1_COMPLETE.md  PHASE3_PASS2_COMPLETE.md  PHASE5_WEEK3_COMPLETE.md  PIPING_VALVE_COVERAGE_ANALYSIS.md  PROTEUS_XML_FORMAT.md  TOOL_CONSOLIDATION_COVERAGE.md  USER_MIGRATION_GUIDE.md  (+1 more)
examples/: README.md  (+3 more)
(+206 files in other folders)
